--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -30,8 +30,7 @@
 	"home_page_title": "Your learning",
 	"required_section_title": "Required learning",
 	"other_section_title": "Other learning",
-	"home_page_suggestions":
-		"Tailored suggestions from %s, your area of work or your organisation.",
+	"home_page_suggestions": "Tailored suggestions from %s, your area of work or your organisation.",
 	"home_page_learning_plan_link": "See more learning in your Learning plan",
 	"home_page_suggestions_link": "See more suggestions for you",
 	"required_learning_done": "You have completed all your required learning.",
@@ -52,12 +51,9 @@
 	"learning_record_page_title": "Learning record",
 	"learning_page_feedback_intro": "You can leave feedback on X item(s).",
 	"feedback_thumbs_prompt": "Did you find this learning_type useful?",
-	"learning_record_page_required_all_done":
-		"You have completed all of your required learning courses.",
-	"learning_record_page_required_none_done":
-		"You have completed none of your required learning courses and have X to do.",
-	"learning_record_page_required_some_done":
-		"You have completed X of your required learning courses and have X to do",
+	"learning_record_page_required_all_done": "You have completed all of your required learning courses.",
+	"learning_record_page_required_none_done": "You have completed none of your required learning courses and have X to do.",
+	"learning_record_page_required_some_done": "You have completed X of your required learning courses and have X to do",
 	"learning_record_column_course_title": "Course",
 	"learning_record_column_course_type": "Type",
 	"learning_record_column_course_duration": "Duration",
@@ -79,8 +75,7 @@
 	"profile_interest_label": "Interests",
 	"register_for_account_link": "Register for an account",
 	"register_start_page_title": "Register for an account",
-	"register_start_page_intro":
-		"You need to create an account before using the proposition_name. This should take 5 minutes.",
+	"register_start_page_intro": "You need to create an account before using the proposition_name. This should take 5 minutes.",
 	"register_email_address_label": "Email address",
 	"register_email_address_confirm_label": "Confirm email address",
 	"register_email_error_title": "There was a problem with your email address",
@@ -92,27 +87,20 @@
 	"register_name_first_name_label": "First name",
 	"register_name_last_name_label": "Last name",
 	"register_name_error_title": "There was a problem with your information",
-	"register_name_error_box_no_first":
-		"Your first name does not appear to be valid",
-	"register_name_error_box_no_last":
-		"Your last name does not appear to be valid",
+	"register_name_error_box_no_first": "Your first name does not appear to be valid",
+	"register_name_error_box_no_last": "Your last name does not appear to be valid",
 	"register_name_error_label_no_first": "Enter a valid first name",
 	"register_name_error_label_no_last": "Enter a valid first name",
 	"register_organisation_title": "Your organisation",
 	"register_organisation_label": "Organisation",
-	"register_organisation_label_hint":
-		"Start typing to find your organisation name",
-	"register_organisation_error_title":
-		"There was a problem with your information",
-	"register_organisation_error_none_selected":
-		"Your organisation does not appear to be valid",
+	"register_organisation_label_hint": "Start typing to find your organisation name",
+	"register_organisation_error_title": "There was a problem with your information",
+	"register_organisation_error_none_selected": "Your organisation does not appear to be valid",
 	"register_organisation_error_label": "Select your organisation",
 	"register_area_page_title": "Your area of work",
-	"register_area_page_intro":
-		"Select all the areas of work that are relevant to your job.",
+	"register_area_page_intro": "Select all the areas of work that are relevant to your job.",
 	"register_area_error_title": "There was a problem with your information",
-	"register_area_error_none_selected":
-		"You must select at least one area of work",
+	"register_area_error_none_selected": "You must select at least one area of work",
 	"register_area_other_label": "Please clarify",
 	"register_grade_page_title": "Your grade",
 	"register_grade_error_title": "There was a problem with your information",
@@ -130,22 +118,18 @@
 	"register_password_error_title": "There was a problem with your password",
 	"register_password_error_box_none_entered": "Your password is too short",
 	"register_password_error_label_none_entered": "Enter a valid password",
-	"register_password_error_box_too_simple":
-		"Your password is not complex enough",
+	"register_password_error_box_too_simple": "Your password is not complex enough",
 	"register_password_error_label_too_simple": "Enter a valid password",
 	"register_password_error_box_no_match": "Your passwords do not match",
 	"register_password_error_label_no_match": "Enter a matching password",
 	"register_review_page_title": "Your registration details",
-	"register_review_page_intro":
-		"Check your details are correct before completing registration.",
+	"register_review_page_intro": "Check your details are correct before completing registration.",
 	"register_review_page_cta": "Complete registration",
 	"register_complete_title": "Registration complete",
-	"register_complete_intro":
-		"Your account with proposition_name has been created",
+	"register_complete_intro": "Your account with proposition_name has been created",
 	"register_complete_sub_title": "What happens next?",
 	"register_complete_p1": "We have sent you a confirmation email.",
-	"register_complete_p2":
-		"You can now (sign into the proposition_name)[/path/to/sign/in/page].",
+	"register_complete_p2": "You can now (sign into the proposition_name)[/path/to/sign/in/page].",
 	"register_process_cta": "Continue",
 	"register_process_cta_edit": "Save changes",
 	"signin_page_title": "Sign in",
@@ -158,17 +142,13 @@
 	"time_hour_plural": "hours",
 	"time_minute_plural": "minutes",
 	"banner_course_added_title": "Course successfully added",
-	"banner_course_added_text":
-		"This course has successfully been added to your learning plan",
-	"banner_course_remove_warning_title":
-		"Are you sure you want to remove this course?",
-	"banner_course_remove_warning_text":
-		"You have already started this course and your progress may be lost.",
+	"banner_course_added_text": "This course has successfully been added to your learning plan",
+	"banner_course_remove_warning_title": "Are you sure you want to remove this course?",
+	"banner_course_remove_warning_text": "You have already started this course and your progress may be lost.",
 	"banner_course_remove_warning_yes": "Yes, remove this course",
 	"banner_course_remove_warning_no": "No, keep it",
 	"banner_course_removed_title": "Course successfully removed",
-	"banner_course_removed_text":
-		"The course has successfully been removed from your learning plan",
+	"banner_course_removed_text": "The course has successfully been removed from your learning plan",
 	"search_results_page_title": "Search results",
 	"search_results_page_intro": "There were X results for search_term",
 	"top_nav_suggestions_page": "Suggestions for you",
@@ -244,42 +224,30 @@
 	"learning_added_to_plan_message": "This has been added to your learning plan",
 	"learning_removed_from_plan_title": "%s",
 	"learning_confirm_removal_plan_title": "Are you sure you want to remove %s?",
-	"learning_confirm_removal_plan_message":
-		"If you remove this course, it will be deleted from your learning plan",
-	"learning_confirm_skip_plan_title":
-		"Are you sure you want to say you did not attend %s?",
-	"learning_confirm_skip_plan_message":
-		"Are you sure you did not attend? This will remove it from your learning plan",
-	"learning_confirm_move_plan_title":
-		"Are you sure you want to add %s to your learning record?",
-	"learning_confirm_move_plan_message":
-		"You should only add it to your learning record if you attended it.",
+	"learning_confirm_removal_plan_message": "If you remove this course, it will be deleted from your learning plan",
+	"learning_confirm_skip_plan_title": "Are you sure you want to say you did not attend %s?",
+	"learning_confirm_skip_plan_message": "Are you sure you did not attend? This will remove it from your learning plan",
+	"learning_confirm_move_plan_title": "Are you sure you want to add %s to your learning record?",
+	"learning_confirm_move_plan_message": "You should only add it to your learning record if you attended it.",
 	"learning_confirm_skip_yes_option": "Yes, remove it",
 	"learning_confirm_skip_no_option": "No, keep it",
 	"learning_confirm_move_yes_option": "Yes, add it",
 	"learning_confirm_move_no_option": "No",
 	"learning_skipped_title": "%s",
-	"learning_skipped_from_plan_message":
-		"This has been removed from your learning plan",
-	"learning_removed_from_plan_message":
-		"This has been removed from your learning plan",
+	"learning_skipped_from_plan_message": "This has been removed from your learning plan",
+	"learning_removed_from_plan_message": "This has been removed from your learning plan",
 	"feedback_content_title": "Content",
-	"feedback_content_description":
-		"Was the %s content comprehensive enough for you?",
+	"feedback_content_description": "Was the %s content comprehensive enough for you?",
 	"feedback_relevance_title": "Relevance",
-	"feedback_relevance_description":
-		"Do you think the course delivered the learning outcomes?",
+	"feedback_relevance_description": "Do you think the course delivered the learning outcomes?",
 	"feedback_presentation_title": "Presentation",
-	"feedback_presentation_description":
-		"Did you like the way the course was delivered?",
+	"feedback_presentation_description": "Did you like the way the course was delivered?",
 	"feedback_interactivity_title": "Interactivity",
 	"feedback_interactivity_description": "Was the course easy to open and use?",
 	"learning_feedback_submitted_title": "Thank you for your feedback",
-	"learning_feedback_submitted_message":
-		"Leaving feedback helps us improve our service.",
+	"learning_feedback_submitted_message": "Leaving feedback helps us improve our service.",
 	"booking_must_select_date_title": "No date selected",
-	"booking_must_select_date_message":
-		"Please select the date you would like to attend this course.",
+	"booking_must_select_date_message": "Please select the date you would like to attend this course.",
 	"%s result": {
 		"one": "%s result",
 		"other": "[0] no results | %s results"
@@ -312,20 +280,16 @@
 		"passwordUnmatched": "Password does not match the confirmation.",
 		"passwordLength": "Password length should be at least 8 characters.",
 		"passwordNotMetReq": "Password did not meet requirements",
-		"lineManagerConfirmation":
-			"Line Manager Email does not match the confirmation.",
+		"lineManagerConfirmation": "Line Manager Email does not match the confirmation.",
 		"lineManagerInvalid": "Line Manager Email is not valid",
 		"lineManagerMissing": "Line Manager Email does not exist",
 		"lineManagerIsUser": "You may not be your own line manager",
 		"po-empty": "Enter a purchase order number",
 		"po-too-short": "A purchase order number must be longer than 2 characters",
 		"po-too-long": "A purchase order number must be shorter than 20 characters",
-		"po-special-characters":
-			"A purchase order should not contain dots (.), colons ( : ), or hashes ( # )",
-		"cancelBooking":
-			"There was an error cancelling your booking request. Please try again.",
-		"registrationNotFound":
-			"You attempted to cancel a booking you were not registered."
+		"po-special-characters": "A purchase order should not contain dots (.), colons ( : ), or hashes ( # )",
+		"cancelBooking": "There was an error cancelling your booking request. Please try again.",
+		"registrationNotFound": "You attempted to cancel a booking you were not registered."
 	},
 	"courseResult": {
 		"complete": "Course complete",
@@ -335,5 +299,6 @@
 	"moduleResult": {
 		"complete": "Module complete"
 	},
-	"file": "file"
+	"file": "file",
+	"SCS": "SCS"
 }
